# dynamic-beast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
data/: BEAST.xml  Heterochronous_H3N2.out  Heterochronous_H3N2_optimised.xml  dynamic_BEAST.xml  dynamic_gss_hcv_coal.xml  dynamic_hcv_bdsky.xml  dynamic_hcv_coal.xml  dynamic_mc3_hcv_bdsky.xml  dynamic_ns_hcv_coal.xml  dynamic_ps_hcv_coal.xml  test.json
dynamic_beast/: __init__.py  __main__.py  main.py
tests/: test_dynamic_beast.py
